Update jar file